<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lucky</string>
    <string name="set_alarm">SET ALARM</string>
    <string name="action_settings">Settings</string>
    <string name="set_alarm_selector_text">wake me up here</string>
    <string name="start_alarm">WAKE ME UP!</string>
    <string name="to_selector_default">Choose a station...</string>
    <string name="station_selector_text">Choose a station...</string>
    <string name="stationSelectorPrompt">Station</string>
    <string name="title_activity_schedule">ScheduleActivity</string>
    <string name="schedule_title">Caltrain time</string>
    <string name="selector_from_default">From</string>
    <string name="selector_to_default">Destination</string>

  <string name="play_services_available">Google play services available</string>
</resources>
