<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#e03d40"
    android:gravity="center_horizontal"
    tools:context="com.randalltower605.lucky.activity.SetAlarmActivity.SetAlaramFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/pageTitle"
            android:text="@string/set_alarm"
            style="@style/PageTitle"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <Button
        android:id="@+id/stationSelectorButton"
        android:text="@string/stationSelectorPrompt"
        style="@style/stationSelector"/>
    <Button
        android:id="@+id/startAlarmButton"
        android:text="@string/start_alarm"
        style="@style/startAlarmButton"/>
</LinearLayout>
