<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#A5FFA5"
    android:gravity="center_horizontal">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/pageTitle"
            android:text="@string/schedule_title"
            style="@style/SchedulePageTitle"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <Button
        android:id="@+id/fromSelectorButton"
        android:text="@string/selector_from_default"
        style="@style/ScheduleStationSelector"/>
    <Button
        android:id="@+id/toSelectorButton"
        android:text="@string/selector_to_default"
        style="@style/ScheduleStationSelector"/>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TableLayout
            android:id="@+id/scheduleResultsTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ScheduleTable"></TableLayout>
        </ScrollView>
</LinearLayout>